# wukong

./: .gitignore  CMakeLists.txt  README.md  array.go  array_test.go  common.h  cuda.cu  cuda.h  go.mod  main.go  makefile  test.cu  test_cuda.cu  wukong.h
assert/: assert.go
cmd/: cmd.go  cmd_test.go  markdown.go  pbar.go  term.go  term_linux.go  term_test.go
llm/: array.go  array_test.go  env.go  llama.go  llm_test.go  mmap.go  model.go  parser.go  pbar.go  puller.go  tensor.go  tensor_test.go  tokenizer.go
llm/mmap/: mmap.go  mmap_test.go
llm/test_data/: shakespeare.txt
tensor/: array.go  array_test.go  tensor.go  tensor_test.go
